--- a/style/styles.css
+++ b/style/styles.css
@@ -22,6 +22,7 @@ h2 {
 
 #liste-recettes {
     width: 300px;
+
 }
 
 .lien-recette {
@@ -30,4 +31,24 @@ h2 {
     padding: 2em;
     background-color: rgb(184, 245, 245);
     border-radius: 80%;
+}
+
+.ingredients {
+    column-count: 2;
+    column-fill: balance;
+    text-align: left;
+    list-style-type: none;
+}
+
+.etapes {
+    text-align: left;
+}
+
+.ingredients>li:first-child {
+    margin-top: 0;
+}
+
+.ingredients>li,
+.etapes>li {
+    margin: 10px;
 }
